Add about IITK page

--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -18,12 +18,12 @@
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About IITK
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Why Recruit? 
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="index.html">Academics</a></li>
-                                <li class="sub-heading"><a href="#">SUB HEADING</a></li>
+                                <li><a href="about_iitk.html">Why recruit?</a></li>
+                                <li class="sub-heading"><a href="#"></a></li>
                                 <li><a href="page_home.html">Students</a></li>
                                 <li><a href="page_home4.html">Faculty</a></li>
                                 <li><a href="page_home5.html">Extra-Curriculars</a></li>
@@ -46,10 +46,11 @@
                                 <li><a href="http://placement.iitk.ac.in">Placement Automation System</a></li>
                                 <li><a href="company_faq.html">FAQs</a></li>
                                 <li class="sub-heading"><a>Internships</a></li>
-                                <li><a href="#">Internships</a></li>
+                                <li><a href="internship.html">Internships</a></li>
                                 <li class="sub-heading"><a>Downloads</a></li>
                                 <li><a href="assets/docs/JAF.doc">Job Announcement Form</a></li>
                                 <li><a href="assets/docs/CRG.pdf">Campus Recruitement Guide</a></li>
+                                <li><a href="assets/docs/IP.docx">Internship Performa</a></li>
                             </ul>    
                             <b class="caret-out"></b>                        
                         </li>
