--- a/beta/about_iitk.html
+++ b/beta/about_iitk.html
@@ -24,31 +24,83 @@ path {
 <div class="container-fluid one-page">
     <div class="one-page-inner one-default">
         <div class="container">
-            <h1>At vero eos et accusamus et iusto odio dignissimos</h1>
+            <h1>About IITK</h1>
             <div class="row-fluid">
                 <div class="span6">
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero consectetur adipiscing elit magna. Sed et quam lacus..</p>
-                    <p>Fusce condimentum eleifend enim a feugiat. Pellentesque viverra vehicula sem ut volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
-                    <a class="btn-u btn-u-large btn-u-green one-page-btn"><i class="icon-bolt"></i> libero adipiscing</a>
-                </div>
+                  <p>
+                   Indian Institute of Technology, Kanpur is one of the premier institutions established by the Government of India. The aim of the Institute is to provide meaningful education, to conduct original research of the highest standard and to provide leadership in technological innovation for the industrial growth of the country. From its very inception, IIT Kanpur has been striving to develop itself into an institution of excellence in education and research in consonance with the contemporary and future needs of India. In meeting this challenge, the Institute has always been making special efforts to recruit talented faculty on a world-wide basis and to admit brilliant students from all over the country by a careful selection process. Continuous efforts have been made to provide the faculty with well-equipped facilities to enable them to participate in national endeavors in Science and Technology in a major way. </p><p>
+                   In addition to offering formal Undergraduate and Post-graduate Programs, the Institute has been involved in Continuing Education and Research &amp; Development in areas of value toboth the Industry and the Government. Not only, has the Institute acted as the breeding ground for ideas and talent, it also has recognised and honoured scholars of distinction</p>                </div>
                 <div class="span6">
-                    <img src="assets/img/new/about-iitk.jpg" class="margin-bottom-10" alt="">
+                    <img src="assets/img/about-iitk.jpg" class="margin-bottom-10" alt="">
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="one-page-inner one-blue">
+    <div class="one-page-inner one-orange">
         <div class="container">
             <h1>An Academic Programme Renowned Globally</h1>
             <div class="row-fluid">
-                <div class="span6">
-                    <img src="assets/img/new/about-acad.jpg" class="margin-bottom-10" alt="">
-                </div>
-                <div class="span6">
-                   <p>The academic program of IIT Kanpur has been renowned in India, and globally for 
-                    its acadmic rigour and focus on building up from the basics. </p>
-                </div>
+                <p>In its continual endeavor to achieve excellence in both undergraduate and postgraduate education and research, the institute has  earned a superb  academic reputation in the global arena.</p>
+                <p><strong>B. Tech</strong></p>
+                <ul>
+                  <li>Students admitted through Joint Entrance  Examination (JEE)</li>
+                  <li>Comprises  of 8 semester academic curriculum </li>
+                  <li>Offered  in all core engineering branches </li>
+                  <li>Consists  of a core programme common to all  students providing a strong base of general education Mathematics, Physics, Chemistry, Engineering Sciences, Technical Arts, and Humanities  and  Social Sciences. With advancement, more and more professional courses come into picture. In the final year, there is a  project in the  chosen branch of specialization.</li>
+                </ul>
+                <p><strong>B.Tech. - M. Tech Dual degree</strong></p>
+                <ul>
+                  <li>Students  admitted through JEE </li>
+                  <li>Two  degrees ( B.Tech and M Tech) are awarded  at the end of 5 year course for  qualifying students. B. Tech. degree  is  awarded in the branch of the department while M Tech degree will be  awarded in  the specialization that is decided at the time of admission.</li>
+                  <li>Academic  core program up to third year is  common with the four year B Tech program. Fourth year onwards electives  for Dual Degree students will be in the area of  their specialization.</li>
+                </ul>
+
+                <p><strong>Integrated M. Sc.</strong></p>
+                <ul>
+                  <li>Students admitted through JEE</li>
+                  <li>Comprises of 10 semester academic curriculum<br /> offered in Chemistry, Physics, Mathematics and Scientific   Computing and Economics. </li>
+                  <li>The program is at par with BTech and Dual degree programs.   The first two semesters is common to all students doing their B.Tech /  M.Sc  (Int.). Then the courses started diverging into more department  specific paths .  It is designed to equip the undergraduate students  with basic engineering  knowledge, besides inculcating enthusiasm and  expertise for research in basic  sciences, enabling them to excel in  diversified environments.</li>
+                </ul>
+                <p><strong>M. Tech.</strong></p>
+                  <ul>
+                  <li>Admissions are made through an all-India  examination,  called GATE. </li>
+                  <li>Comprises of 4  semester academic curriculum </li>
+                  <li>Besides the core  engineering branches, M.  Tech. Programs are also available in the  interdisciplinary areas such  as Nuclear Engineering, Biological Sciences and  Bioengineering, Laser  Technology, Environmental Engineering, Materials Science,  and  Industrial and Management Engineering </li>
+
+                  <li>Acquaints the  students with the various  aspects of engineering through several courses, both  introductory and  in the specialized area followed by research, leading to a  thesis on a  topic in the area</li>
+                  </ul>
+              <p><strong>PhD</strong></p>
+                <ul>
+                <li>Offered  in Sciences, Engineering, Humanities  &amp; Social Sciences and Management.</li>
+                <li>Aimed  at helping the student acquire  proficiency in the chosen area through course  work, followed by  doctoral research. At the end of the course work the student  will  appear for the Ph.D. comprehensive examination, and continue his  research  towards completion of his Doctoral Thesis.</li>
+                </ul>
+                <p><strong>M.Sc.-Ph.D. dual degree program</strong></p>
+                <ul>
+                <li>M.Sc.  students of The Department of Physics  are allowed to continue for a Ph.D</li>
+
+                </ul>
+                <p><strong>MSc </strong></p>
+                <ul>
+                <li>Students  with B.Sc. (Hons.) background are  chosen through a rigorous selection process,  called JAM.</li>
+                <li>Comprises of 4 semester academic curriculum </li>
+                <li>Offered  in Physics, Chemistry, Mathematics and  Statistics</li>
+                </ul>
+                <p><strong>MBA</strong></p>
+                <ul>
+                <li>Admissions  are made through the all-India  examinations, JMET</li>
+                <li>Comprises of 4 semester academic curriculum </li>
+
+                <li>Carefully  structured and integrated with class  room teaching, case discussions, hands-on  industry experience with  internship and&nbsp; project work.  Continuous industrial interaction,  seminars and live projects are a part of the  curriculum. </li>
+                </ul>
+                <p><strong>Master of Design </strong></p>
+                <ul>
+                <li>Students  are selected through the all-India  examinations, CEED</li>
+                <li>Comprises  of 4 semester academic curriculum</li>
+                <li>The  programme is interdisciplinary in nature  with a strong emphasis on a balanced  curriculum of theory and practice.  The programme has two sub groups: Product  design and Visual  communication Design. Students are required to conduct a  project and  prepare a thesis as a part of their curriculum. Various workshops  are  also held to broaden the outlook of students and also in helping them in   deciding their career </li>
+                </ul>
+</div>
+
             </div>
         </div>
     </div>
