--- a/beta/about_iitk.html
+++ b/beta/about_iitk.html
@@ -99,7 +99,6 @@ path {
                 <li>Comprises  of 4 semester academic curriculum</li>
                 <li>The  programme is interdisciplinary in nature  with a strong emphasis on a balanced  curriculum of theory and practice.  The programme has two sub groups: Product  design and Visual  communication Design. Students are required to conduct a  project and  prepare a thesis as a part of their curriculum. Various workshops  are  also held to broaden the outlook of students and also in helping them in   deciding their career </li>
                 </ul>
-</div>
 
             </div>
         </div>
@@ -107,8 +106,10 @@ path {
 
     <div class="one-page-inner one-grey">
         <div class="container">
-            <h1>Graduating Batch Demographics</h1>
-            <div id="demo"></div>
+            <h1>Graduating Batch Demographics<div class="pull-right"><a class="btn-u">By Degree</a></div></h1>
+            <div id="span12">
+              <div id="demo" style="margin:auto;width:700px;"></div>
+            </div>
         </div>
            
     </div>
@@ -118,15 +119,41 @@ path {
             <h1>Culturals and Extra Curriculars</h1>
             <div class="row-fluid">
                 <div class="span6">
-                    <p>IIT Kanpur provides an environment that nurtures leaders in addition to sound engineers. Students independently manage several club activities, national level festivals, administration of hostels and thus emerge as winner not only in national level competitions but also in their corporate life as well. This provides a platform to the students to hone their inter-personal skills and provides a holistic education.</p>
+                    <p>IIT Kanpur  provides an environment that nurtures leaders in addition to sound engineers.  Students independently manage several club activities, national level festivals,  administration of hostels and thus emerge as winner not only in national level  competitions but also in their corporate life as well. This provides a platform  to the students to hone their inter-personal skills and provides a holistic  education.</p>
+                    <p><strong>Festivals</strong></p>
+                    <p> The National  Festivals of IIT Kanpur budget around 1.5 crore provide a unique opportunity  where the students can experience management lessons first hand. Right from the  stage of conceptualization to final implementation the students manage  everything on their own. The organizing team gets to interact and deal with  corporate, celebrities and hence inculcate managerial and inter-personal skills.</p>
 
-                    <p> The National Festivals of IIT Kanpur budget around 1.5 crore provide a unique opportunity where the students can experience management lessons first hand. Right from the stage of conceptualization to final implementation the students manage everything on their own. The organizing team gets to interact and deal with corporate, celebrities and hence inculcate managerial and inter-personal skills. </p>
+                    <ul>
+                      <li><strong>Techkriti:</strong> The Global  techno-entrepreneurial festival of IIT Kanpur attracts the best talent from all  across the world in its competitions. Several high profile dignitaries from the  field of science and technology also attend the festival.</li>
+                      <li><strong>Antaragni</strong>: The festival  in its 43rd year has evolved as the biggest cultural festival in North  India which witnesses more than 6000 participants. Some of the best known  artists in the country from the field of music, dance, theatre and arts have  been a part of the festival in the past. A team of more than 600 students works  for around nine months to put up the show.</li
+                      >
+                      <li><strong>Udghosh: </strong>The  national level sports festival of IIT Kanpur<b> </b>sees participation from all corners of the country. The festival provides a platform for the  participating teams and the organizers to inculcate a sense of team work and  leadership.</li>
 
-                    <p><strong>Techkriti:</strong> The Global techno-entrepreneurial festival of IIT Kanpur attracts the best talent from all across the world in its competitions. Several high profile dignitaries from the field of science and technology also attend the festival.</p>
+                      <p><strong>Inter-Hostel Competitions</u></h3></b><br />
 
-                    <p><strong>Antaragni:</strong> The festival in its 43rd year has evolved as the biggest cultural festival in North India which witnesses more than 6000 participants. Some of the best known artists in the country from the field of music, dance, theatre and arts have been a part of the festival in the past. A team of more than 600 students works for around nine months to put up the show.</p>
+  The inter hall  competitions see the best of friends turn into the fiercest of competitors and  hence bring out the best of talents in the students. </p>
+<p><b>Galaxy:</b>  The  cultural championship.<br />
+  <b>Varchasva: </b> The  sports championship.<br />
+  <b>Takneek: </b> The science and technology  championship. <br />
 
-                    <p><strong>Udghosh:</strong> The national level sports festival of IIT Kanpur sees participation from all corners of the country. The festival provides a platform for the participating teams and the organizers to inculcate a sense of team work and leadership.</p>
+  <b>Impressions: </b> The cultural event for post graduate students.</p>
+<p><b><h3><u>Club Activities</u></h3></b><br />
+  Club activates  are managed by the students under the aegis of Students&rsquo; Gymkhana. Club  activities provide the learning outside the classroom which sensitizes students  to other aspects of life. Clubs organize several workshops and competitions all  around the year in addition to representing IIT Kanpur at national level  competitions. </p>
+<p><b>Science  and Technology Clubs</b><br />
+  The  Science and Technology Council has  several clubs like the Astronomy Club, Business club, Electronics club,  Programming club, Gliding club, Ham club,  Aeromodelling Club, Photography club, Robotics Club.</p>
+
+<p><b>Cultural  Council</b><br />
+  Cultural  Council provides platform to every cultural taste through the Dance Club,  Dramatics Club, Fine Arts Club, Music Club, Quiz Club, English Literary  Society, Hindi Sahitya Sabha, Vivekananda Samiti and SPIC MACAY Society.</p>
+<p><b>Films  and Media Council:</b><br />
+  The FMC Council  manages Vox Populi-the students&rsquo; newspaper of IIT Kanpur, Meander - The  Student&rsquo;s Magazine, Animation club, Student&rsquo;s Television Society.</p>
+<p><b>Games  and Sports council</b>:<br />
+
+  In addition the  several sports and games teams the institute also has Adventure club,  Tae-Kwon-Do Club, Nature club, Bridge Club and Chess club</p>
+<p><b>Presidential  Council:</b><br />
+  Book Club, GLDC,  Prayas (Student run social group)</p>
+<p><b>E- Cell: </b>An Entrepreneurship Cell has been established and our  annual Science and Technological festival (Techkriti) has been transformed to a  Technology and Entrepreneurship festival which includes a number of Business  idea games and events.</p>
+
+
                 </div>
                 <div class="span6">
                     <img src="assets/img/new/about-cultural.jpg" class="margin-bottom-10" alt="">
@@ -209,7 +236,7 @@ path {
 <!--#include file="_footer.html" -->
 <script>
 
-var width = 960,
+var width = 700,
     height = 700,
     padding = 5,
     radius = Math.min(width, height) / 2;
