--- a/beta/about_iitk.html
+++ b/beta/about_iitk.html
@@ -114,6 +114,30 @@ path {
            
     </div>
 
+    <div class="one-page-inner one-default">
+      <div class="container">
+        <h1>Faculty</h1>
+        <div class="span6">
+            <img src="assets/img/about-faculty.jpg" class="margin-bottom-10" alt="">
+        </div>
+        <div class="span6">
+          <p> IIT Kanpur has 351 faculty members having degrees from the renowned universities across the world. The Faculty at IIT Kanpur are involved in cutting-edge research both in the industry and within IIT Kanpur and also holds positions as varied as editors of various international journals, visiting faculty in many universities, advisors to government and industry.</p>
+
+          <p> The contribution of the Faculty has been recognized frequently and have been honored with the awards such as:</p>
+          <ul>
+            <li>Padma Vibhushan</li>
+            <li>Padmashree</li>
+            <li>S. S. Bhatnagar (more than ten in number)</li>
+            <li>Fellowship of Indian Academy of Engineering</li>
+            <li>Fellowship of Indian Academy of Science</li>
+            <li>Fellowship of National Academy of Science</li>
+            <li>Humboldt and JSPS Fellowships</li>
+          </ul>
+
+        </div>
+      </div>
+    </div>
+
     <div class="one-page-inner one-red">
         <div class="container">
             <h1>Culturals and Extra Curriculars</h1>
@@ -128,31 +152,27 @@ path {
                       <li><strong>Antaragni</strong>: The festival  in its 43rd year has evolved as the biggest cultural festival in North  India which witnesses more than 6000 participants. Some of the best known  artists in the country from the field of music, dance, theatre and arts have  been a part of the festival in the past. A team of more than 600 students works  for around nine months to put up the show.</li
                       >
                       <li><strong>Udghosh: </strong>The  national level sports festival of IIT Kanpur<b> </b>sees participation from all corners of the country. The festival provides a platform for the  participating teams and the organizers to inculcate a sense of team work and  leadership.</li>
+                    </ul>
+                      <p><strong>Inter-Hostel Competitions</strong></p>
 
-                      <p><strong>Inter-Hostel Competitions</u></h3></b><br />
+                      <p>The inter hall  competitions see the best of friends turn into the fiercest of competitors and  hence bring out the best of talents in the students. </p>
+                      <ul>
+                        <li><strong>Galaxy:</strong>  The  cultural championship.</li>
+                        <li><strong>Varchasva:</strong> The  sports championship.</li>
+                        <li><strong>Takneek:</strong> The science and technology  championship. </li>
+                        <li><strong>Impressions:</strong> The cultural event for post graduate students.</li>
+                      </ul>
 
-  The inter hall  competitions see the best of friends turn into the fiercest of competitors and  hence bring out the best of talents in the students. </p>
-<p><b>Galaxy:</b>  The  cultural championship.<br />
-  <b>Varchasva: </b> The  sports championship.<br />
-  <b>Takneek: </b> The science and technology  championship. <br />
+                      <p><strong>Club Activities</strong></p>
+                      <p> Club activates  are managed by the students under the aegis of Students&rsquo; Gymkhana. Club  activities provide the learning outside the classroom which sensitizes students  to other aspects of life. Clubs organize several workshops and competitions all  around the year in addition to representing IIT Kanpur at national level  competitions. </p>
 
-  <b>Impressions: </b> The cultural event for post graduate students.</p>
-<p><b><h3><u>Club Activities</u></h3></b><br />
-  Club activates  are managed by the students under the aegis of Students&rsquo; Gymkhana. Club  activities provide the learning outside the classroom which sensitizes students  to other aspects of life. Clubs organize several workshops and competitions all  around the year in addition to representing IIT Kanpur at national level  competitions. </p>
-<p><b>Science  and Technology Clubs</b><br />
-  The  Science and Technology Council has  several clubs like the Astronomy Club, Business club, Electronics club,  Programming club, Gliding club, Ham club,  Aeromodelling Club, Photography club, Robotics Club.</p>
-
-<p><b>Cultural  Council</b><br />
-  Cultural  Council provides platform to every cultural taste through the Dance Club,  Dramatics Club, Fine Arts Club, Music Club, Quiz Club, English Literary  Society, Hindi Sahitya Sabha, Vivekananda Samiti and SPIC MACAY Society.</p>
-<p><b>Films  and Media Council:</b><br />
-  The FMC Council  manages Vox Populi-the students&rsquo; newspaper of IIT Kanpur, Meander - The  Student&rsquo;s Magazine, Animation club, Student&rsquo;s Television Society.</p>
-<p><b>Games  and Sports council</b>:<br />
-
-  In addition the  several sports and games teams the institute also has Adventure club,  Tae-Kwon-Do Club, Nature club, Bridge Club and Chess club</p>
-<p><b>Presidential  Council:</b><br />
-  Book Club, GLDC,  Prayas (Student run social group)</p>
-<p><b>E- Cell: </b>An Entrepreneurship Cell has been established and our  annual Science and Technological festival (Techkriti) has been transformed to a  Technology and Entrepreneurship festival which includes a number of Business  idea games and events.</p>
-
+                      <ul>
+                        <li><strong>Science  and Technology Clubs:</strong> The  Science and Technology Council has  several clubs like the Astronomy Club, Business club, Electronics club,  Programming club, Gliding club, Ham club,  Aeromodelling Club, Photography club, Robotics Club.</li>
+                        <li><strong>Cultural  Council:</strong> Cultural  Council provides platform to every cultural taste through the Dance Club,  Dramatics Club, Fine Arts Club, Music Club, Quiz Club, English Literary  Society, Hindi Sahitya Sabha, Vivekananda Samiti and SPIC MACAY Society.</li>
+                        <li><strong>Films  and Media Council:</strong> The FMC Council  manages Vox Populi-the students&rsquo; newspaper of IIT Kanpur, Meander - The  Student&rsquo;s Magazine, Animation club, Student&rsquo;s Television Society.</li>
+                        <li><strong>Games  and Sports council:</strong> In addition the  several sports and games teams the institute also has Adventure club,  Tae-Kwon-Do Club, Nature club, Bridge Club and Chess club</li>
+                        <li><strong>Presidential  Council:</strong> Book Club, GLDC,  Prayas (Student run social group). An Entrepreneurship Cell has been established and our  annual Science and Technological festival (Techkriti) has been transformed to a  Technology and Entrepreneurship festival which includes a number of Business  idea games and events.</li>
+                      </ul>
 
                 </div>
                 <div class="span6">
