--- a/beta/about_iitk.html
+++ b/beta/about_iitk.html
@@ -117,6 +117,7 @@ path {
     <div class="one-page-inner one-default">
       <div class="container">
         <h1>Faculty</h1>
+        <div class="row-fluid">
         <div class="span6">
             <img src="assets/img/about-faculty.jpg" class="margin-bottom-10" alt="">
         </div>
@@ -136,48 +137,80 @@ path {
 
         </div>
       </div>
+      </div>
     </div>
 
     <div class="one-page-inner one-red">
         <div class="container">
             <h1>Culturals and Extra Curriculars</h1>
+
             <div class="row-fluid">
-                <div class="span6">
-                    <p>IIT Kanpur  provides an environment that nurtures leaders in addition to sound engineers.  Students independently manage several club activities, national level festivals,  administration of hostels and thus emerge as winner not only in national level  competitions but also in their corporate life as well. This provides a platform  to the students to hone their inter-personal skills and provides a holistic  education.</p>
-                    <p><strong>Festivals</strong></p>
-                    <p> The National  Festivals of IIT Kanpur budget around 1.5 crore provide a unique opportunity  where the students can experience management lessons first hand. Right from the  stage of conceptualization to final implementation the students manage  everything on their own. The organizing team gets to interact and deal with  corporate, celebrities and hence inculcate managerial and inter-personal skills.</p>
-
-                    <ul>
-                      <li><strong>Techkriti:</strong> The Global  techno-entrepreneurial festival of IIT Kanpur attracts the best talent from all  across the world in its competitions. Several high profile dignitaries from the  field of science and technology also attend the festival.</li>
-                      <li><strong>Antaragni</strong>: The festival  in its 43rd year has evolved as the biggest cultural festival in North  India which witnesses more than 6000 participants. Some of the best known  artists in the country from the field of music, dance, theatre and arts have  been a part of the festival in the past. A team of more than 600 students works  for around nine months to put up the show.</li
-                      >
-                      <li><strong>Udghosh: </strong>The  national level sports festival of IIT Kanpur<b> </b>sees participation from all corners of the country. The festival provides a platform for the  participating teams and the organizers to inculcate a sense of team work and  leadership.</li>
-                    </ul>
-                      <p><strong>Inter-Hostel Competitions</strong></p>
-
-                      <p>The inter hall  competitions see the best of friends turn into the fiercest of competitors and  hence bring out the best of talents in the students. </p>
-                      <ul>
-                        <li><strong>Galaxy:</strong>  The  cultural championship.</li>
-                        <li><strong>Varchasva:</strong> The  sports championship.</li>
-                        <li><strong>Takneek:</strong> The science and technology  championship. </li>
-                        <li><strong>Impressions:</strong> The cultural event for post graduate students.</li>
-                      </ul>
-
-                      <p><strong>Club Activities</strong></p>
-                      <p> Club activates  are managed by the students under the aegis of Students&rsquo; Gymkhana. Club  activities provide the learning outside the classroom which sensitizes students  to other aspects of life. Clubs organize several workshops and competitions all  around the year in addition to representing IIT Kanpur at national level  competitions. </p>
-
-                      <ul>
-                        <li><strong>Science  and Technology Clubs:</strong> The  Science and Technology Council has  several clubs like the Astronomy Club, Business club, Electronics club,  Programming club, Gliding club, Ham club,  Aeromodelling Club, Photography club, Robotics Club.</li>
-                        <li><strong>Cultural  Council:</strong> Cultural  Council provides platform to every cultural taste through the Dance Club,  Dramatics Club, Fine Arts Club, Music Club, Quiz Club, English Literary  Society, Hindi Sahitya Sabha, Vivekananda Samiti and SPIC MACAY Society.</li>
-                        <li><strong>Films  and Media Council:</strong> The FMC Council  manages Vox Populi-the students&rsquo; newspaper of IIT Kanpur, Meander - The  Student&rsquo;s Magazine, Animation club, Student&rsquo;s Television Society.</li>
-                        <li><strong>Games  and Sports council:</strong> In addition the  several sports and games teams the institute also has Adventure club,  Tae-Kwon-Do Club, Nature club, Bridge Club and Chess club</li>
-                        <li><strong>Presidential  Council:</strong> Book Club, GLDC,  Prayas (Student run social group). An Entrepreneurship Cell has been established and our  annual Science and Technological festival (Techkriti) has been transformed to a  Technology and Entrepreneurship festival which includes a number of Business  idea games and events.</li>
-                      </ul>
-
+              <div class="span6 pull-right" style="margin:10px 10px;">
+                <div id="myCarousel1" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="assets/img/carousel/4.jpg" alt="">
+                      <div class="carousel-caption">
+                      <h4>First Thumbnail label</h4>
+                      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</p>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="assets/img/carousel/2.jpg" alt="">
+                      <div class="carousel-caption">
+                        <h4>Second Thumbnail label</h4>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</p>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="assets/img/carousel/3.jpg" alt="">
+                      <div class="carousel-caption">
+                        <h4>Third Thumbnail label</h4>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</p>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="assets/img/carousel/4.jpg" alt="">
+                      <div class="carousel-caption">
+                        <h4>Third Thumbnail label</h4>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-arrow">
+                    <a class="left carousel-control" href="#myCarousel1" data-slide="prev"><i class="icon-angle-left"></i></a>
+                    <a class="right carousel-control" href="#myCarousel1" data-slide="next"><i class="icon-angle-right"></i></a>
+                  </div>
                 </div>
-                <div class="span6">
-                    <img src="assets/img/new/about-cultural.jpg" class="margin-bottom-10" alt="">
-                </div>
+              </div>
+              <p>IIT Kanpur  provides an environment that nurtures leaders in addition to sound engineers.  Students independently manage several club activities, national level festivals,  administration of hostels and thus emerge as winner not only in national level  competitions but also in their corporate life as well. This provides a platform  to the students to hone their inter-personal skills and provides a holistic  education.</p>
+              <p><strong>Festivals</strong></p>
+              <p> The National  Festivals of IIT Kanpur budget around 1.5 crore provide a unique opportunity  where the students can experience management lessons first hand. Right from the  stage of conceptualization to final implementation the students manage  everything on their own. The organizing team gets to interact and deal with  corporate, celebrities and hence inculcate managerial and inter-personal skills.</p>
+              <ul>
+                <li><strong>Techkriti:</strong> The Global  techno-entrepreneurial festival of IIT Kanpur attracts the best talent from all  across the world in its competitions. Several high profile dignitaries from the  field of science and technology also attend the festival.</li>
+                <li><strong>Antaragni</strong>: The festival  in its 43rd year has evolved as the biggest cultural festival in North  India which witnesses more than 6000 participants. Some of the best known  artists in the country from the field of music, dance, theatre and arts have  been a part of the festival in the past. A team of more than 600 students works  for around nine months to put up the show.</li>
+                <li><strong>Udghosh: </strong>The  national level sports festival of IIT Kanpur<b> </b>sees participation from all corners of the country. The festival provides a platform for the  participating teams and the organizers to inculcate a sense of team work and  leadership.</li>
+              </ul>
+              <p><strong>Inter-Hostel Competitions</strong></p>
+
+              <p>The inter hall  competitions see the best of friends turn into the fiercest of competitors and  hence bring out the best of talents in the students. </p>
+              <ul>
+                <li><strong>Galaxy:</strong>  The  cultural championship.</li>
+                <li><strong>Varchasva:</strong> The  sports championship.</li>
+                <li><strong>Takneek:</strong> The science and technology  championship. </li>
+                <li><strong>Impressions:</strong> The cultural event for post graduate students.</li>
+              </ul>
+
+              <p><strong>Club Activities</strong></p>
+              <p> Club activates  are managed by the students under the aegis of Students&rsquo; Gymkhana. Club  activities provide the learning outside the classroom which sensitizes students  to other aspects of life. Clubs organize several workshops and competitions all  around the year in addition to representing IIT Kanpur at national level  competitions. </p>
+
+              <ul>
+                <li><strong>Science  and Technology Clubs:</strong> The  Science and Technology Council has  several clubs like the Astronomy Club, Business club, Electronics club,  Programming club, Gliding club, Ham club,  Aeromodelling Club, Photography club, Robotics Club.</li>
+                <li><strong>Cultural  Council:</strong> Cultural  Council provides platform to every cultural taste through the Dance Club,  Dramatics Club, Fine Arts Club, Music Club, Quiz Club, English Literary  Society, Hindi Sahitya Sabha, Vivekananda Samiti and SPIC MACAY Society.</li>
+                <li><strong>Films  and Media Council:</strong> The FMC Council  manages Vox Populi-the students&rsquo; newspaper of IIT Kanpur, Meander - The  Student&rsquo;s Magazine, Animation club, Student&rsquo;s Television Society.</li>
+                <li><strong>Games  and Sports council:</strong> In addition the  several sports and games teams the institute also has Adventure club,  Tae-Kwon-Do Club, Nature club, Bridge Club and Chess club</li>
+                <li><strong>Presidential  Council:</strong> Book Club, GLDC,  Prayas (Student run social group). An Entrepreneurship Cell has been established and our  annual Science and Technological festival (Techkriti) has been transformed to a  Technology and Entrepreneurship festival which includes a number of Business  idea games and events.</li>
+              </ul>
             </div>
         </div>
     </div>
@@ -351,6 +384,8 @@ function arcTween(d) {
         : function(t) { x.domain(xd(t)); y.domain(yd(t)).range(yr(t)); return arc(d); };
   };
 }
+
+
 
 
 
