change minor things

--- a/beta/about_us.html
+++ b/beta/about_us.html
@@ -27,8 +27,8 @@
               109,Outreach Building,<br /> 
               IIT Kanpur, Kanpur-208016<br /> 
               UP, India.<br /> 
-              Phone: <a href="tel:+915122594433">91-512-259-4433/34</a><br /> 
-              Fax: 91-512-259-4434<br /> 
+              Phone: <a href="tel:+915122594433">+91-512-259-4433/34</a><br /> 
+              Fax: +91-512-259-4434<br /> 
               Email: <a href="mailto:spo@iitk.ac.in">spo@iitk.ac.in</a><br />
             </address>
             </div>
@@ -106,7 +106,7 @@
     <thead>
       <tr>
         <th>Name</th>
-        <th>EMail</th>
+        <th>Email</th>
         <th>Mobile</th>
       </tr>
     </thead>
@@ -129,7 +129,7 @@
       <tr>
         <th>Name</th>
         <th>Designation</th>
-        <th>EMail</th>
+        <th>Email</th>
         <th>Mobile</th>
       <tr>
     </thead>
@@ -252,7 +252,7 @@
     <tr>
       <th>Name</th>
       <th>Department</th>
-      <th>EMail</th>
+      <th>Email</th>
       <th>Phone</th>
     </tr>
   </thead>
@@ -260,9 +260,9 @@
 
  <tr>
   <td > Avijeet Chatterjee </td>
-<td >Laser Technology</td>
+<td >Centre for Lasers Photonics(CELP)</td>
 <td ><a href="mailto:avijitc@iitk.ac.in">avijitc@iitk.ac.in</td>
-<td > </td>
+<td >+91 8853862748 </td>
 
 </tr>
 <tr>
@@ -274,7 +274,7 @@
 </tr>
 <tr>
   <td > Manas Kumar </td>
-<td >Nuclear Engineering</td>
+<td >Nuclear Engineering and Technology</td>
 <td ><a href="mailto:manaskr@iitk.ac.in">manaskr@iitk.ac.in</td>
 <td >+91 8127576268</td>
 
@@ -286,19 +286,13 @@
     <tr>
       <th>Name</th>
       <th>Department</th>
-      <th>EMail</th>
+      <th>Email</th>
       <th>Phone</th>
     </tr>
   </thead>
  <tbody>
 <div class="headline"><h4>Science &amp; Humanities</h4></div>
-  <tr>
-  <td > Apratim Tiwari </td>
-<td >Chemistry</td>
-<td ><a href="mailto:  ">  </td>
-<td >  </td>
 
-</tr>
 
  <tr>
   <td > Piyush Gupta </td>
@@ -308,19 +302,20 @@
 
 </tr>
  <tr>
-  <td > Abhishek Dhandharia </td>
+  <td> Abhishek Dhandharia </td>
 <td >Mathematics and Scientific Computing</td>
 <td ><a href="mailto:abhidhan@iitk.ac.in">abhidhan@iitk.ac.in</td>
 <td >+91 8960370701</td>
 
 </tr>
- <tr>
-  <td > Pravin Sreenivasan </td>
+<tr>
+  <td > Praveen Srinivasan</td>
 <td >MBA</td>
-<td ><a href="mailto:  ">  </td>
-<td >  </td>
+<td ><a href="mailto:spraveen@iitk.ac.in">spraveen@iitk.ac.in</td>
+<td >+91 9695782211</td>
 
 </tr>
+
  <tr>
   <td > Niraj Kumar </td>
 <td >Physics</td>
@@ -342,7 +337,7 @@
     <tr>
       <th>Name</th>
       <th>Department</th>
-      <th>EMail</th>
+      <th>Email</th>
       <th>Phone</th>
     </tr>
   </thead>
@@ -408,7 +403,7 @@
  <tr>
   <td > Harish </td>
 <td >Chemical Engineering</td>
-<td ><a href="mailto:hmalagar">hmalagar</td>
+<td ><a href="mailto:hmalagar">hmalagar@iitk.ac.in</td>
 <td >+91 7376216844</td>
 
 </tr>
@@ -426,13 +421,7 @@
 <td >+91 8953432272</td>
 
 </tr>
- <tr>
-  <td > Shubhdeep Kochhar </td>
-<td >Computer Science and Engineering</td>
-<td ><a href="mailto:  ">  </td>
-<td ></td>
 
-</tr>
  
  <tr>
   <td > Amalladinne Vamsi Krishna </td>
@@ -519,22 +508,7 @@
 <td >+91 9721272714</td>
 
 </tr>
- <tr>
-  <td > Harsh Vardhan </td>
-<td >MSP</td>
-<td ><a href="mailto:  ">  </td>
-<td >  </td>
 
-</tr>
-
- 
- <tr>
-  <td > Khushboo Gupta </td>
-<td >  </td>
-<td ><a href="mailto:  ">  </td>
-<td >  </td>
-
-</tr>
 
 
  </tbody>
