--- a/beta/brochures.html
+++ b/beta/brochures.html
@@ -22,7 +22,7 @@
     <div class="row-fluid">
     <div class="margin-bottom-40 row-fluid"><h3>Institute Placement Brochure
       <span class="pull-right">
-      <a href="assets/docs/brochures/IITK_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+      <a href="assets/docs/iitk.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
       <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       <span></h3>
     </div>
