--- a/beta/facilities.html
+++ b/beta/facilities.html
@@ -22,14 +22,14 @@
     <div class="row-fluid">
     <div class="headline"><h3>Facilities</h3></div>
     <ul>
-      <li>Pickup services on payment basis from Lucknow Airport and Kanpur Central Railway Station.</li>
+      <li>Pickup services on payment basis from Lucknow(Amausi) Airport , Kanpur Airport and Kanpur Central Railway Station. Chopper rides from Lucknow Airport to IIT Kanpur campus can be availed on prior request to the Placement Office.</li>
       <li>Fully equipped Seminar and conference rooms for Group discussions and Personal Interviews.</li>
-      <li>Centrally air conditioned Auditorium and Lecture halls, fully equipped with latest multimedia and Wi-Fi for pre placement talks, workshops, tests etc.</li>
+      <li>Centrally air conditioned Auditorium and Lecture halls, fully equipped with latest multimedia and Wi-Fi for Pre-Placement Talks(PPTs), Workshops, tests etc.</li>
       <li>Facility of Tele Conferencing and Video Conferencing.</li>
-      <li>On campus accommodation in visitors' guest house for visiting recruiters <small>(subject to availability)</small>.</li>
-      <li>Access to all student profiles via an highly efficient and effective Placement Automation System (PAS).</li>
-      <li>Round the clock assistantship by the students' volunteers at each level of placement process.</li>
-      <li>Highly motivated and experienced staff to handle the whole process.</li>
+      <li>On campus accommodation in Visitors' Guest House for the recruiting panel <small>(subject to availability)</small>.</li>
+      <li>Access to all student profiles via a highly efficient and effective Placement Automation System (PAS).</li>
+      <li>Round the clock assistance by the students' volunteers at each level of placement process.</li>
+      <li>Highly motivated and experienced staff to coordinate the whole process.</li>
     </ul>
    </div>
   </div>
