--- a/beta/company_registration.html
+++ b/beta/company_registration.html
@@ -10,7 +10,7 @@
 <!--=== Breadcrumbs ===-->
 <div class="row-fluid breadcrumbs margin-bottom-40">
   <div class="container">
-        <h1 class="pull-left">Chairman's Message</h1>
+        
         
   </div><!--/container-->
 </div><!--/breadcrumbs-->
@@ -18,7 +18,7 @@
 <!--=== Content Part ===-->
 <div class="container">   
   <div class="row-fluid margin-bottom-10">
-    <div class="reg-page">
+    <div class="message-page">
       <h3>Register with us</h3>
       <iframe src="https://spreadsheets.google.com/spreadsheet/embeddedform?formkey=dGlBZE1MSW1uVjZTUXB2YUc0cnpBX3c6MQ" width="760" height="711" frameborder="0" marginheight="0" marginwidth="0">Fetching Google Form</iframe>
 
