--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -24,11 +24,11 @@
                             <ul class="dropdown-menu">
                                 <li><a href="about_iitk.html">Why recruit?</a></li>
                                 <li class="sub-heading"><a href="#"></a></li>
-                                <li><a href="page_home.html">Students</a></li>
-                                <li><a href="page_home4.html">Faculty</a></li>
-                                <li><a href="page_home5.html">Extra-Curriculars</a></li>
-                                <li><a href="page_home1.html">Alumni</a></li>
-                                <li><a href="page_home2.html">Links</a></li>
+                                <li><a href="about_iitk.html#academics">Academics</a></li>
+                                <li><a href="about_iitk.html#demography">Demography</a></li>
+                                <li><a href="about_iitk.html#faculty">Faculty</a></li>
+                                <li><a href="about_iitk.html#research">Research</a></li>
+                                <li><a href="about_iitk.html#extra-curriculars">Extra-Curriculars</a></li>
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>
