--- a/beta/internship.html
+++ b/beta/internship.html
@@ -10,7 +10,7 @@
 <!--=== Breadcrumbs ===-->
 <div class="row-fluid breadcrumbs margin-bottom-40">
   <div class="container">
-        <h1 class="pull-left">Procedure &amp; Policy</h1>
+        <h1 class="pull-left">Internships at IIT Kanpur</h1>
         
   </div><!--/container-->
 </div><!--/breadcrumbs-->
