--- a/beta/about_iitk.html
+++ b/beta/about_iitk.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <!--#include file="_head.html" -->
-<style>
+
+<style type="text/css">
+
+.chart {
+  display: block;
+  margin: auto;
+  margin-top: 60px;
+  font-size: 11px;
+}
+
+rect {
+  stroke: #eee;
+  fill: #aaa;
+  fill-opacity: .8;
+}
+
+rect.parent {
+  cursor: pointer;
+  fill: steelblue;
+}
+
+text {
+  pointer-events: none;
+}
 
 path {
   stroke: #fff;
@@ -106,9 +129,22 @@ path {
 
     <div class="one-page-inner one-grey" id="demography">
         <div class="container">
-            <h1>Graduating Batch Demographics<div class="pull-right"><a class="btn-u">By Degree</a></div></h1>
-            <div id="span12">
-              <div id="demo" style="margin:auto;width:700px;"></div>
+            <h1>Graduating Batch Demographics
+              <div class="pull-right">
+                <a class="btn-u" id="btndept" style="width:100px;">By Degree</a>
+                <a class="btn-u" id="btndegree" style="width:100px;">By Dept.</a>
+                <br/>
+                <a class="btn-u" id="btnpie" style="width:100px;">Pie Graph</a>
+                <a class="btn-u" id="btnpartition" style="width:100px;">Partition Graph</a>
+              </div>
+            </h1>
+            <div class="span12" id="pie">
+              <div class="pie dept" id="piedept" style="margin:auto;width:700px;"></div>
+              <div class="pie degree" id="piedegree" style="margin:auto;width:700px;"></div>
+            </div>
+            <div class="span12" id="partition">
+              <div class="partition dept" id="partitiondept" style="margin:auto;"></div>
+              <div class="partition degree" id="partitiondegree" style="margin:auto;"></div>
             </div>
         </div>
            
@@ -252,7 +288,7 @@ var x = d3.scale.linear()
 var y = d3.scale.pow().exponent(1.3).domain([0, 1]).range([0, radius]);
 var color = d3.scale.category20c();
 
-var svg = d3.select("#demo").append("svg")
+var svg = d3.select("#piedept").append("svg")
     .attr("width", width+padding*2)
     .attr("height", height+padding*2)
   .append("g")
@@ -342,6 +378,79 @@ function arcTween(d) {
 
 
 </script>
+<script type="text/javascript">
 
+var w = 960,
+    h = 600,
+    x_part = d3.scale.linear().range([0, w]),
+    y_part = d3.scale.linear().range([0, h]);
+
+var vis = d3.select("#partitiondept").append("div")
+    .attr("class", "chart")
+    .style("width", w + "px")
+    .style("height", h + "px")
+    .append("svg:svg")
+    .attr("width", w)
+    .attr("height", h);
+
+var part = d3.layout.partition()
+    .value(function(d) { return d.size; });
+
+var colorpart = d3.scale.category20c();
+
+d3.json("assets/json/demographics.json", function(root) {
+var g_part = vis.selectAll("g")
+     .data(partition.nodes(root))
+     .enter().append("svg:g")
+     .attr("transform", function(d) { return "translate(" + x_part(d.y) + "," + y_part(d.x) + ")"; })
+     .on("click", click_part);
+
+   var kx = w / root.dx,
+       ky = h / 1;
+
+   g_part.append("svg:rect")
+       .attr("width", root.dy * kx)
+       .attr("height", function(d) { return d.dx * ky; })
+       .attr("class", function(d) { return d.children ? "parent" : "child"; })
+       .style("fill", function(d) { return colorpart((d.children ? d : d.parent).name); });
+
+  g_part.append("svg:text")
+       .attr("transform", transform_part)
+       .attr("dy", ".35em")
+       .style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; })
+       .text(function(d) { return d.name; })
+
+  d3.select(window)
+      .on("click", function() { click_part(root); })
+
+   function click_part(d) {
+     if (!d.children) return;
+
+     kx = (d.y ? w - 40 : w) / (1 - d.y);
+     ky = h / d.dx;
+     x_part.domain([d.y, 1]).range([d.y ? 40 : 0, w]);
+     y_part.domain([d.x, d.x + d.dx]);
+
+     var t = g_part.transition()
+         .duration(d3.event.altKey ? 7500 : 750)
+         .attr("transform", function(d) { return "translate(" + x_part(d.y) + "," + y_part(d.x) + ")"; });
+
+     t.select("rect")
+         .attr("width", d.dy * kx)
+         .attr("height", function(d) { return d.dx * ky; });
+
+     t.select("text")
+         .attr("transform", transform_part)
+         .style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; });
+
+    d3.event.stopPropagation();
+    }
+
+   function transform_part(d) {
+    return "translate(8," + d.dx * ky / 2 + ")";
+       }
+ });
+
+     </script>
 </body>
 </html>	
